--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nova-tts-mac",
   "version": "1.0.0",
-  "description": "<div align=\"center\"> <a href=\"//nova-assistant.com\" rel=\"nofollow\"> <img src=\"https://github.com/HeyHeyChicken/NOVA-TTS-Mac/blob/master/resources/nova-logo.svg\" alt=\"NOVA\" width=\"300\"> </a>",
+  "description": "This skill will allow your assistant to answer you (no connection needed) with the Mac's Siri voice.",
   "main": "index.js",
   "dependencies": {
     "fs": "0.0.1-security",
@@ -16,8 +16,8 @@
     "type": "git",
     "url": "git+https://github.com/HeyHeyChicken/NOVA-TTS-Mac.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Antoine Duval",
+  "license": "SEE LICENSE IN LICENSE FILE",
   "bugs": {
     "url": "https://github.com/HeyHeyChicken/NOVA-TTS-Mac/issues"
   },
